# topdown-cpp-game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
levels/: level1.txt  level2.txt  level3.txt
src/: config.h  main.cpp  utils.cpp  utils.h
src/engine/: color.h  component.cpp  component.h  engine.cpp  engine.h  entity.cpp  entity.h  input.cpp  input.h  mathutils.h  physics.cpp  physics.h  renderop.cpp  renderop.h  timestate.cpp  timestate.h
src/engine/components/: camera.cpp  camera.h  physics.cpp  physics.h  renderables.cpp  renderables.h
src/engine/types/: entity_collection.cpp  entity_collection.h  proxy_vector.h  vec2.h
src/game/: component.cpp  component.h  game.cpp  game.h
src/game/components/: bullet.cpp  bullet.h  enemy.cpp  enemy.h  enemy_manager.cpp  enemy_manager.h  game_manager.cpp  game_manager.h  player.cpp  player.h
